# gedit-line-ending-style-plugin

./: .gitignore  .svnignore  Makefile.am  Makefile.in  README.md  configure  configure.ac
po/: LINGUAS  Makefile.in  Makevars  POTFILES.in  de.gmo  de.po  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po  gedit-line-ending-style-plugin.pot
src/: .gitignore  .svnignore  Makefile.am  Makefile.in  line-ending-style.gedit-plugin  line-ending-style.plugin  line-ending-style.py  line-ending-style.py.in  lineendingstyle.plugin  lineendingstyle.plugin.in  lineendingstyle.py  lineendingstyle.py.in
